# HippocampalSWRDynamics

./: 2.3  README.md  documentation.txt  poetry.lock1  pyproject.toml
1D_notebooks_copy/: 1D_DynamicsModels.ipynb  1D_RD_DynamicsModels.ipynb  1D_TrajectortDecoding.ipynb  1D_Ymaze-Copy1.ipynb  1D_arm_Ymaze.ipynb  1D_arm_Ymaze_likelihood.ipynb  1D_preprocessing.ipynb  1Ddata.ipynb  NB1_get_constants.ipynb  NB2_DynamicsModels_Results.ipynb  NB3_gridsearch_parameters.ipynb  NB4_RD_TrajectortDecoding.ipynb  NB4_TrajectortDecoding.ipynb  RD_compressed_density_decoding-Copy1.ipynb  get_constants.ipynb  mc_results.pkl  openfield.ipynb  place_fields.txt  runtimes.txt  spike_histograms.txt  step_by_step_DynamicsModels.ipynb  step_by_step_preprocessing.ipynb  test_1D_DynamicsModel.ipynb  test_compressed_density_decoding.ipynb
1D_scripts/: gridsearch.py  model_comparison.py  preprocessing.py  preprocessing_run.py  run_models.py  run_preprocessing.py
notebooks/: Figure2.ipynb  Figure3.ipynb
replay_structure/: config.py  forward_backward.py  marginals.py  metadata.py  model_comparison.py  ratday_preprocessing.py  read_write.py  ripple_preprocessing.py  run_snippet_preprocessing.py  structure_analysis_input.py  structure_models.py  structure_models_gridsearch.py  structure_trajectory.py  utils.py
