[tool.poetry]
name = "HippocampalSWRDynamics"
version = "0.1.0"
description = ""
authors = ["DrugowitschLab"]

packages = [
    { include = "replay_structure" },
]

[tool.poetry.dependencies]
numpy = "^1.18.2"
pandas = "^1.0.3"
scipy = "^1.4.1"
matplotlib = "^3.2.1"
torch = "^1.4.0"
notebook = "^6.0.3"
click = "^7.1.1"
seaborn = "^0.10.1"
compress-pickle = "^2.0.1"
mat73 = "^0.60"
python = "^3.7"
ipython = "^7.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
black = "18.9b0"
yapf = "^0.29.0"
ipykernel = "^5.4.3"
mypy = "^0.910"
jupyterlab = "^3.6.3"
jupyterlab_widgets = "^3.0.7"
ipympl = "^0.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
